--- a/kununua_app/pubspec.yaml
+++ b/kununua_app/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   ionicons: ^0.2.1
+  graphql_flutter: ^5.1.0
 
 dev_dependencies:
   flutter_test:
