--- a/kununua_app/pubspec.yaml
+++ b/kununua_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   ionicons: ^0.2.1
   graphql_flutter: ^5.1.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
