FEAT: NODE CLASS
The class Node has been created and a bit of refactoring has been made

--- a/kununua_app/.gitignore
+++ b/kununua_app/.gitignore
@@ -3,7 +3,6 @@
 *.log
 *.pyc
 *.swp
-.DS_Store
 .atom/
 .buildlog/
 .history
@@ -42,3 +41,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# DS_Store files
+**/.DS_Store
