FEAT: NEW LOGIN DESIGN

--- a/kununua_app/pubspec.yaml
+++ b/kununua_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   ionicons: ^0.2.1
   graphql_flutter: ^5.1.0
   shared_preferences: ^2.0.15
+  flutter_login: ^4.1.1
 
 dev_dependencies:
   flutter_test:
