FEAT: SIMPLE NEW LOGIN IMPLEMENTED
I have implemented a simple login using the new UI, the next commit will contain the complex situation

--- a/kununua_app/pubspec.yaml
+++ b/kununua_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   graphql_flutter: ^5.1.0
   shared_preferences: ^2.0.15
   flutter_login: ^4.1.1
+  flutter_hooks: ^0.18.5+1
 
 dev_dependencies:
   flutter_test:
