FEAT: MAIN PAGE DESIGN
This is the design of Kununua's main page when an user is logged

--- a/kununua_app/pubspec.yaml
+++ b/kununua_app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   ionicons: ^0.2.1
   graphql_flutter: ^5.1.0
   shared_preferences: ^2.0.15
+  carousel_slider: ^4.2.1
+  blurrycontainer: ^1.0.2
 
 dev_dependencies:
   flutter_test:
