--- a/kununua_app/pubspec.yaml
+++ b/kununua_app/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   shared_preferences: ^2.0.15
   carousel_slider: ^4.2.1
   blurrycontainer: ^1.0.2
+  swipe: ^0.0.1
+  draggable_home: ^1.0.4
 
 dev_dependencies:
   flutter_test:
@@ -75,3 +77,4 @@ flutter:
           weight: 700
   assets:
     - assets/images/
+    - assets/images/products/
