--- a/django_api/requirements.txt
+++ b/django_api/requirements.txt
@@ -23,7 +23,7 @@ mysqlclient==2.1.1
 outcome==1.2.0
 Pillow==9.4.0
 promise==2.3
-psycopg2==2.9.5
+psycopg2-binary==2.9.5
 PyJWT==2.6.0
 PySocks==1.7.1
 pytz==2022.5
