--- a/kununua_app/pubspec.yaml
+++ b/kununua_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.0.15
   flutter_login: ^4.1.1
   flutter_hooks: ^0.18.5+1
+  google_sign_in: ^5.4.3
 
 dev_dependencies:
   flutter_test:
