--- a/kununua_backend/requirements.txt
+++ b/kununua_backend/requirements.txt
@@ -15,6 +15,7 @@ charset-normalizer==2.1.1
 click==8.1.3
 coloredlogs==15.0.1
 Django==4.1.2
+django-cors-headers==3.13.0
 django-extensions==3.2.1
 django-graphql-jwt==0.3.4
 django-livereload-server==0.4
@@ -22,17 +23,18 @@ djangorestframework==3.14.0
 exceptiongroup==1.0.4
 fastapi==0.87.0
 filetype==1.2.0
-flatbuffers==23.1.4
+flatbuffers==23.1.21
 frozenlist==1.3.3
 graphene==3.1.1
 graphene-django==3.0.0
 graphql-core==3.2.3
 graphql-relay==3.2.0
 h11==0.14.0
+httplib2==0.21.0
 humanfriendly==10.0
 idna==3.4
 ImageHash==4.3.1
-imageio==2.24.0
+imageio==2.25.0
 importlib-metadata==6.0.0
 livereload==2.6.3
 llvmlite==0.39.1
@@ -54,6 +56,7 @@ psycopg2-binary==2.9.5
 pydantic==1.10.4
 PyJWT==2.6.0
 PyMatting==1.1.8
+pyparsing==3.0.9
 PySocks==1.7.1
 python-multipart==0.0.5
 pytz==2022.5
@@ -71,7 +74,7 @@ sqlparse==0.4.3
 starlette==0.21.0
 sympy==1.11.1
 text-unidecode==1.3
-tifffile==2022.10.10
+tifffile==2023.1.23.1
 tornado==6.2
 tqdm==4.64.1
 trio==0.22.0
