--- a/kununua_backend/requirements.txt
+++ b/kununua_backend/requirements.txt
@@ -48,6 +48,7 @@ onnxruntime==1.13.1
 opencv-python-headless==4.6.0.66
 outcome==1.2.0
 packaging==23.0
+pandas==1.5.3
 Pillow==9.3.0
 pooch==1.6.0
 promise==2.3
@@ -58,6 +59,7 @@ PyJWT==2.6.0
 PyMatting==1.1.8
 pyparsing==3.0.9
 PySocks==1.7.1
+python-dateutil==2.8.2
 python-multipart==0.0.5
 pytz==2022.5
 PyWavelets==1.4.1
