--- a/kununua_app/pubspec.yaml
+++ b/kununua_app/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_login: ^4.1.1
   flutter_hooks: ^0.18.5+1
   google_sign_in: ^5.4.3
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
