--- a/kununua_app/pubspec.yaml
+++ b/kununua_app/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_hooks: ^0.18.5+1
   google_sign_in: ^5.4.3
   flutter_rating_bar: ^4.0.1
+  animations: ^2.0.7
 
 dev_dependencies:
   flutter_test:
