--- a/kununua_backend/requirements.txt
+++ b/kununua_backend/requirements.txt
@@ -14,12 +14,14 @@ certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 coloredlogs==15.0.1
+deep-translator==1.10.0
 Django==4.1.2
 django-cors-headers==3.13.0
 django-extensions==3.2.1
 django-graphql-jwt==0.3.4
 django-livereload-server==0.4
 djangorestframework==3.14.0
+docx2txt==0.8
 exceptiongroup==1.0.4
 fastapi==0.87.0
 filetype==1.2.0
@@ -36,6 +38,7 @@ idna==3.4
 ImageHash==4.3.1
 imageio==2.25.0
 importlib-metadata==6.0.0
+jellyfish==0.9.0
 livereload==2.6.3
 llvmlite==0.39.1
 lxml==4.9.1
@@ -58,6 +61,7 @@ pydantic==1.10.4
 PyJWT==2.6.0
 PyMatting==1.1.8
 pyparsing==3.0.9
+pypdf==3.4.1
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-multipart==0.0.5
