--- a/kununua_backend/requirements.txt
+++ b/kununua_backend/requirements.txt
@@ -18,12 +18,15 @@ deep-translator==1.10.0
 Django==4.1.2
 django-cors-headers==3.13.0
 django-extensions==3.2.1
+django-filter==22.1
 django-graphql-jwt==0.3.4
 django-livereload-server==0.4
 djangorestframework==3.14.0
 docx2txt==0.8
+emoji==2.2.0
 exceptiongroup==1.0.4
 fastapi==0.87.0
+filelock==3.10.7
 filetype==1.2.0
 flatbuffers==23.1.21
 frozenlist==1.3.3
@@ -39,9 +42,11 @@ ImageHash==4.3.1
 imageio==2.25.0
 importlib-metadata==6.0.0
 jellyfish==0.9.0
+Jinja2==3.1.2
 livereload==2.6.3
 llvmlite==0.39.1
 lxml==4.9.1
+MarkupSafe==2.1.2
 mpmath==1.2.1
 multidict==6.0.4
 networkx==3.0
@@ -57,6 +62,7 @@ pooch==1.6.0
 promise==2.3
 protobuf==4.21.12
 psycopg2-binary==2.9.5
+PuLP==2.7.0
 pydantic==1.10.4
 PyJWT==2.6.0
 PyMatting==1.1.8
@@ -77,10 +83,12 @@ sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
+stanza==1.5.0
 starlette==0.21.0
 sympy==1.11.1
 text-unidecode==1.3
 tifffile==2023.1.23.1
+torch==2.0.0
 tornado==6.2
 tqdm==4.64.1
 trio==0.22.0
