--- a/kununua_app/pubspec.yaml
+++ b/kununua_app/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.9.2"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -61,6 +62,24 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_icons:
+  android: true
+  ios: false
+  image_path: "assets/appIcons/play_store_512.png"
+  min_sdk_android: 33 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/appIcons/play_store_512.png"
+    background_color: "#2D5D70"
+    theme_color: "#2D5D70"
+  windows:
+    generate: true
+    image_path: "assets/appIcons/play_store_512.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/appIcons/play_store_512.png"
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -82,3 +101,4 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/appIcons/
