--- a/kununua_app/pubspec.yaml
+++ b/kununua_app/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   google_sign_in: ^5.4.3
   flutter_rating_bar: ^4.0.1
   animations: ^2.0.7
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
