--- a/kununua_backend/requirements.txt
+++ b/kununua_backend/requirements.txt
@@ -94,6 +94,7 @@ tqdm==4.64.1
 trio==0.22.0
 trio-websocket==0.9.2
 typing_extensions==4.4.0
+Unidecode==1.3.6
 urllib3==1.26.13
 uvicorn==0.20.0
 watchdog==2.1.9
