--- a/kununua_backend/requirements.txt
+++ b/kununua_backend/requirements.txt
@@ -1,5 +1,9 @@
 aiohttp==3.8.3
 aiosignal==1.3.1
+ampl-module-base==20230523
+ampl-module-cplex==20230228
+amplpy==0.10.0
+ampltools==0.5.6
 aniso8601==9.0.1
 anyio==3.6.2
 appdirs==1.4.4
@@ -24,12 +28,14 @@ django-livereload-server==0.4
 djangorestframework==3.14.0
 docx2txt==0.8
 emoji==2.2.0
+et-xmlfile==1.1.0
 exceptiongroup==1.0.4
 fastapi==0.87.0
 filelock==3.10.7
 filetype==1.2.0
 flatbuffers==23.1.21
 frozenlist==1.3.3
+future==0.18.3
 graphene==3.1.1
 graphene-django==3.0.0
 graphql-core==3.2.3
@@ -54,6 +60,7 @@ numba==0.56.4
 numpy==1.23.5
 onnxruntime==1.13.1
 opencv-python-headless==4.6.0.66
+openpyxl==3.1.2
 outcome==1.2.0
 packaging==23.0
 pandas==1.5.3
