--- a/kununua_backend/requirements.txt
+++ b/kununua_backend/requirements.txt
@@ -1,8 +1,6 @@
 aiohttp==3.8.3
 aiosignal==1.3.1
-ampl-module-base==20230523
-ampl-module-cplex==20230228
-amplpy==0.10.0
+amplpy==0.11.0
 ampltools==0.5.6
 aniso8601==9.0.1
 anyio==3.6.2
@@ -105,6 +103,7 @@ Unidecode==1.3.6
 urllib3==1.26.13
 uvicorn==0.20.0
 watchdog==2.1.9
+Whoosh==2.7.4
 wsproto==1.2.0
 yarl==1.8.2
 zipp==3.11.0
