--- a/kununua_backend/requirements.txt
+++ b/kununua_backend/requirements.txt
@@ -1,5 +1,7 @@
 aiohttp==3.8.3
 aiosignal==1.3.1
+ampl-module-base==20230523
+ampl-module-cplex==20230228
 amplpy==0.10.0
 ampltools==0.5.6
 aniso8601==9.0.1
@@ -88,7 +90,7 @@ safetensors==0.3.1
 scikit-image==0.19.3
 scikit-learn==1.2.2
 scipy==1.9.3
-selenium==4.7.2
+selenium==4.10.0
 sentence-transformers==2.2.2
 sentencepiece==0.1.99
 six==1.16.0
@@ -111,10 +113,12 @@ transformers==4.30.2
 trio==0.22.0
 trio-websocket==0.9.2
 typing_extensions==4.4.0
+undetected-chromedriver==3.5.0
 Unidecode==1.3.6
 urllib3==1.26.13
 uvicorn==0.20.0
 watchdog==2.1.9
+websockets==11.0.3
 Whoosh==2.7.4
 wsproto==1.2.0
 yarl==1.8.2
